// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllBoostPoolsDepth > retrieves the boost pools depth balance > boost pools depth 1`] = `
[
  {
    "asset": "Btc",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Btc",
    "availableAmount": 100010n,
    "tier": 10,
  },
  {
    "asset": "Btc",
    "availableAmount": 0n,
    "tier": 30,
  },
<<<<<<< HEAD
=======
  {
    "asset": "Eth",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Eth",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "Eth",
    "availableAmount": 0n,
    "tier": 30,
  },
  {
    "asset": "Flip",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Flip",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "Flip",
    "availableAmount": 0n,
    "tier": 30,
  },
  {
    "asset": "Usdc",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Usdc",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "Usdc",
    "availableAmount": 0n,
    "tier": 30,
  },
  {
    "asset": "Usdt",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Usdt",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "Usdt",
    "availableAmount": 0n,
    "tier": 30,
  },
  {
    "asset": "Wbtc",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Wbtc",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "Wbtc",
    "availableAmount": 0n,
    "tier": 30,
  },
  {
    "asset": "Sol",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "Sol",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "Sol",
    "availableAmount": 0n,
    "tier": 30,
  },
  {
    "asset": "SolUsdc",
    "availableAmount": 0n,
    "tier": 5,
  },
  {
    "asset": "SolUsdc",
    "availableAmount": 0n,
    "tier": 10,
  },
  {
    "asset": "SolUsdc",
    "availableAmount": 0n,
    "tier": 30,
  },
>>>>>>> 83b722ba (test: update snapshot tests)
]
`;

exports[`getAllBoostPoolsDepth > retrieves the boost pools depth balance 1`] = `
[
  [
    "https://archive.perseverance.chainflip.io",
    [
      {
        "id": "1",
        "jsonrpc": "2.0",
        "method": "cf_boost_pools_depth",
        "params": [],
      },
    ],
  ],
]
`;

exports[`getFundingEnvironment > retrieves the funding environment 1`] = `
[
  [
    "https://archive.perseverance.chainflip.io",
    [
      {
        "id": "1",
        "jsonrpc": "2.0",
        "method": "cf_funding_environment",
        "params": [],
      },
    ],
  ],
]
`;

exports[`getIngressEgressEnvironment > retrieves the ingress egress environment 2`] = `
[
  [
    "https://archive.perseverance.chainflip.io",
    [
      {
        "id": "1",
        "jsonrpc": "2.0",
        "method": "cf_ingress_egress_environment",
        "params": [],
      },
    ],
  ],
]
`;

exports[`getSwappingEnvironment > retrieves the swapping environment 2`] = `
[
  [
    "https://archive.perseverance.chainflip.io",
    [
      {
        "id": "1",
        "jsonrpc": "2.0",
        "method": "cf_swapping_environment",
        "params": [],
      },
    ],
  ],
]
`;
